@@ -18,6 +18,7 @@ Fixed bugs
 - fixed stopping when there is a candidate with a change in the LP bound for both children in strong branching of branch_fullstrong
 - fixed detection of sinks in varbound detection from cumulative constraints
 - fixed memory allocation when adding strong SBCs for enclosing orbit of symmetric subgroups (disabled by default)
+- free paths of branch-and-bound tree iteratively instead of recursively to avoid stack overflow
 
 Build system
 ------------
